--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -20,7 +20,7 @@
     <a data-toggle="modal" data-target=".bd-example-modal-sm" class="mr-3"
       ><img src="./assets/translate_black_24dp.png" alt=""
     /></a>
-    <a (click)="myfunction()"
+    <a (click)="sidebarToggle()"
       ><img src="./assets/menu_black_24dp.svg" alt=""
     /></a>
     <a routerLink="notification" class="ml-3"
